[package]
name = "actix-diesel-sqlite"
version = "0.1.0"
authors = ["Prateek Kumar <prateek.kr85@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"

uuid = { version = "0.8.1", features = ["serde", "v4"] }
